@@ -24,8 +24,8 @@ import org.apache.lucene.codecs.StoredFieldsWriter;
 import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.FieldInfos;
 import org.apache.lucene.index.SegmentInfo;
+import org.apache.lucene.index.StoredFieldDataInput;
 import org.apache.lucene.index.StoredFieldVisitor;
-import org.apache.lucene.store.DataInput;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.tests.util.TestUtil;
@@ -161,9 +161,9 @@ public class AssertingStoredFieldsFormat extends StoredFieldsFormat {
     }
 
     @Override
-    public void writeField(FieldInfo info, DataInput value, int length) throws IOException {
+    public void writeField(FieldInfo info, StoredFieldDataInput value) throws IOException {
       assert docStatus == Status.STARTED;
-      in.writeField(info, value, length);
+      in.writeField(info, value);
     }
 
     @Override
