@@ -26,7 +26,7 @@ import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.FieldInfos;
 import org.apache.lucene.index.MergeState;
 import org.apache.lucene.index.SegmentInfo;
-import org.apache.lucene.store.DataInput;
+import org.apache.lucene.index.StoredFieldDataInput;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.util.Accountable;
@@ -149,11 +149,11 @@ class CrankyStoredFieldsFormat extends StoredFieldsFormat {
     }
 
     @Override
-    public void writeField(FieldInfo info, DataInput value, int length) throws IOException {
+    public void writeField(FieldInfo info, StoredFieldDataInput value) throws IOException {
       if (random.nextInt(10000) == 0) {
         throw new IOException("Fake IOException from StoredFieldsWriter.writeField()");
       }
-      delegate.writeField(info, value, length);
+      delegate.writeField(info, value);
     }
 
     @Override
