@@ -595,6 +595,9 @@ public abstract class BaseIndexFileFormatTestCase extends LuceneTestCase {
         case BINARY:
           consumer.writeField(field, value.getBinaryValue());
           break;
+        case DATA_INPUT:
+          consumer.writeField(field, value.getDataInputValue());
+          break;
         case STRING:
           consumer.writeField(field, value.getStringValue());
           break;
